# uCal

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  mainpage.dox
DoxyDoc/: annotations.dox  ccommon.dox  cimpl.dox  gpsdate.dox  gregorian.dox  isoweek.dox  julian.dox  ntpdate.dox
include/ucal/: calconst.h  common.h  gpsdate.h  gregorian.h  isoweek.h  julian.h  ntpdate.h  tsdecode.h  tzposix.h
scripts/: calfloat.py  edivconst.py  template.py
src/: calconst.h.in  common.c  gpsdate.c  gregorian.c  isoweek.c  julian.c  ntpdate.c  tsdecode.c  tzposix.c
tests/: test-adec.c  test-calc.c  test-isow.c  test-perf.c  test-tzposix.c
